--- a/my_website/all.css
+++ b/my_website/all.css
@@ -1,6 +1,4 @@
 body{
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c2/Paper_cup_DS.jpg");
+    background-image: url("http://0.tqn.com/d/desktoppub/1/S/_/k/3/swatch-aliceblue.png");
     background-size:1600px 1200px;
-    background-position: center;
-    background-repeat: no-repeat;
 }
